--- a/src/pages/specifications.mdx
+++ b/src/pages/specifications.mdx
@@ -55,7 +55,7 @@ import { Callout } from 'nextra/components';
         
 
 
-        <div className="relative bg-white rounded-lg border border-gray-200 overflow-hidden">
+        <div className="relative bg-white border border-gray-200 overflow-hidden">
           <div className="p-6">
             <div className="flex flex-col md:flex-row justify-between items-start mb-4">
               <div>
@@ -126,7 +126,7 @@ import { Callout } from 'nextra/components';
           </div>
         </div>
 
-        <div className="bg-white rounded-lg border border-gray-200">
+        <div className="bg-white border border-gray-200">
           <div className="p-6">
             <div className="flex flex-col md:flex-row justify-between items-start mb-4">
               <div>
@@ -209,7 +209,7 @@ import { Callout } from 'nextra/components';
       </div>
       
       <div className="space-y-4">
-        <div className="relative bg-white rounded-lg border border-gray-200 overflow-hidden">
+        <div className="relative bg-white border border-gray-200 overflow-hidden">
           <div className="p-6">
             <div className="flex flex-col md:flex-row justify-between items-start mb-4">
               <div>
@@ -280,7 +280,7 @@ import { Callout } from 'nextra/components';
           </div>
         </div>
 
-        <div className="bg-white rounded-lg border border-gray-200">
+        <div className="bg-white border border-gray-200">
           <div className="p-6">
             <div className="flex flex-col md:flex-row justify-between items-start mb-4">
               <div>
@@ -362,128 +362,139 @@ import { Callout } from 'nextra/components';
 	<Tabs.Tab>
 		<div className='bg-white border border-gray-200 mt-6'>
 			<div className='overflow-x-auto'>
-				<table className='w-full text-sm'>
+				<table className='w-full text-xs'>
 					<thead>
 						<tr className='border-b border-gray-200'>
-							<th className='text-left p-3 font-semibold text-gray-700'>Release</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>ChartQA</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>TextVQA</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>DocVQA</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>RealWorldQA</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>CountBench</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>TallyQA</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>POPE</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>SeedBench2+</th>
+							<th className='text-left p-2 font-semibold text-gray-700'>Release</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>ChartQA</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>TextVQA</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>DocVQA</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>RealWorldQA</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>CountBench</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>TallyQA</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>POPE</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>SeedBench2+</th>
+						</tr>
+						<tr className='border-b border-gray-200 text-[10px] text-gray-600'>
+							<th className='text-left p-1.5'></th>
+							<th className='text-right p-1.5'></th>
+							<th className='text-right p-1.5'></th>
+							<th className='text-right p-1.5'></th>
+							<th className='text-right p-1.5'></th>
+							<th className='text-right p-1.5'></th>
+							<th className='text-right p-1.5'>(simple/complex)</th>
+							<th className='text-right p-1.5'>(rand/pop/adv)</th>
+							<th className='text-right p-1.5'></th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr className='border-b border-gray-200 bg-green-50'>
-							<td className='p-3'>
+							<td className='p-2'>
 								<div className='font-medium'>2025-01-09</div>
-								<div className='text-xs text-gray-500'>latest</div>
+								<div className='text-[10px] text-gray-500'>latest</div>
 							</td>
-							<td className='text-right p-3 font-mono'>72.2</td>
-							<td className='text-right p-3 font-mono'>73.4</td>
-							<td className='text-right p-3 font-mono'>75.9</td>
-							<td className='text-right p-3 font-mono'>0.6</td>
-							<td className='text-right p-3 font-mono'>0.8</td>
-							<td className='text-right p-3 font-mono'>0.8</td>
-							<td className='text-right p-3 font-mono'>89.8</td>
-							<td className='text-right p-3 font-mono'>55.7</td>
+							<td className='text-right p-2 font-mono'>72.2</td>
+							<td className='text-right p-2 font-mono'>73.4</td>
+							<td className='text-right p-2 font-mono'>75.9</td>
+							<td className='text-right p-2 font-mono'>0.6</td>
+							<td className='text-right p-2 font-mono'>0.8</td>
+							<td className='text-right p-2 font-mono'>0.8</td>
+							<td className='text-right p-2 font-mono'>89.8</td>
+							<td className='text-right p-2 font-mono'>55.7</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
-							<td className='p-3'>2024-08-26</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>64.3</td>
-							<td className='text-right p-3 font-mono'>65.2</td>
-							<td className='text-right p-3 font-mono'>70.5</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>82.6 / 77.6</td>
-							<td className='text-right p-3 font-mono'>89.6 / 88.8 / 87.2</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
+							<td className='p-2'>2024-08-26</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>64.3</td>
+							<td className='text-right p-2 font-mono'>65.2</td>
+							<td className='text-right p-2 font-mono'>70.5</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>82.6 / 77.6</td>
+							<td className='text-right p-2 font-mono'>89.6 / 88.8 / 87.2</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
-							<td className='p-3'>2024-07-23</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>64.9</td>
-							<td className='text-right p-3 font-mono'>60.2</td>
-							<td className='text-right p-3 font-mono'>61.9</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>82.0 / 76.8</td>
-							<td className='text-right p-3 font-mono'>91.3 / 89.7 / 86.9</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
+							<td className='p-2'>2024-07-23</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>64.9</td>
+							<td className='text-right p-2 font-mono'>60.2</td>
+							<td className='text-right p-2 font-mono'>61.9</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>82.0 / 76.8</td>
+							<td className='text-right p-2 font-mono'>91.3 / 89.7 / 86.9</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
-							<td className='p-3'>2024-05-20</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>63.1</td>
-							<td className='text-right p-3 font-mono'>57.2</td>
-							<td className='text-right p-3 font-mono'>30.5</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>82.1 / 76.6</td>
-							<td className='text-right p-3 font-mono'>91.5 / 89.6 / 86.2</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
+							<td className='p-2'>2024-05-20</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>63.1</td>
+							<td className='text-right p-2 font-mono'>57.2</td>
+							<td className='text-right p-2 font-mono'>30.5</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>82.1 / 76.6</td>
+							<td className='text-right p-2 font-mono'>91.5 / 89.6 / 86.2</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
-							<td className='p-3'>2024-05-08</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>62.7</td>
-							<td className='text-right p-3 font-mono'>53.1</td>
-							<td className='text-right p-3 font-mono'>30.5</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>81.6 / 76.1</td>
-							<td className='text-right p-3 font-mono'>90.6 / 88.3 / 85.0</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
+							<td className='p-2'>2024-05-08</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>62.7</td>
+							<td className='text-right p-2 font-mono'>53.1</td>
+							<td className='text-right p-2 font-mono'>30.5</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>81.6 / 76.1</td>
+							<td className='text-right p-2 font-mono'>90.6 / 88.3 / 85.0</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
-							<td className='p-3'>2024-04-02</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>61.7</td>
-							<td className='text-right p-3 font-mono'>49.7</td>
-							<td className='text-right p-3 font-mono'>24.3</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>80.1 / 74.2</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
+							<td className='p-2'>2024-04-02</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>61.7</td>
+							<td className='text-right p-2 font-mono'>49.7</td>
+							<td className='text-right p-2 font-mono'>24.3</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>80.1 / 74.2</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
-							<td className='p-3'>2024-03-13</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>60.6</td>
-							<td className='text-right p-3 font-mono'>46.4</td>
-							<td className='text-right p-3 font-mono'>22.2</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>79.6 / 73.3</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
+							<td className='p-2'>2024-03-13</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>60.6</td>
+							<td className='text-right p-2 font-mono'>46.4</td>
+							<td className='text-right p-2 font-mono'>22.2</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>79.6 / 73.3</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
-							<td className='p-3'>2024-03-06</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>59.8</td>
-							<td className='text-right p-3 font-mono'>43.1</td>
-							<td className='text-right p-3 font-mono'>20.9</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>79.5 / 73.2</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
+							<td className='p-2'>2024-03-06</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>59.8</td>
+							<td className='text-right p-2 font-mono'>43.1</td>
+							<td className='text-right p-2 font-mono'>20.9</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>79.5 / 73.2</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
-							<td className='p-3'>2024-03-04</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono'>58.5</td>
-							<td className='text-right p-3 font-mono'>36.4</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
-							<td className='text-right p-3 font-mono text-gray-400'>-</td>
+							<td className='p-2'>2024-03-04</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono'>58.5</td>
+							<td className='text-right p-2 font-mono'>36.4</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
+							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
-			<div className='p-4 text-sm text-gray-600 border-t border-gray-200'>
-				<h4 className='font-medium mb-2'>Benchmark Details:</h4>
+			<div className='p-4 text-xs 3xl:text-sm text-gray-600 border-t border-gray-200'>
+				<h4 className='font-semibold mb-2'>Benchmark Details</h4>
 				<div className='grid grid-cols-1 md:grid-cols-2 gap-2'>
 					<ul className='space-y-1'>
 						<li><span className='font-medium'>ChartQA</span>: Chart understanding and question answering</li>
@@ -504,30 +515,30 @@ import { Callout } from 'nextra/components';
 	<Tabs.Tab>
 		<div className='bg-white border border-gray-200 mt-6'>
 			<div className='overflow-x-auto'>
-				<table className='w-full text-sm'>
+				<table className='w-full text-xs'>
 					<thead>
 						<tr className='border-b border-gray-200'>
-							<th className='text-left p-3 font-semibold text-gray-700'>Model</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>TextVQA</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>DocVQA</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>TallyQA</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>POPE</th>
-							<th className='text-right p-3 font-semibold text-gray-700'>NaturalBench</th>
+							<th className='text-left p-2 font-semibold text-gray-700'>Model</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>TextVQA</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>DocVQA</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>TallyQA</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>POPE</th>
+							<th className='text-right p-2 font-semibold text-gray-700'>NaturalBench</th>
 						</tr>
-						<tr className='border-b border-gray-200 text-xs text-gray-600'>
-							<th className='text-left p-2'></th>
-							<th className='text-right p-2'></th>
-							<th className='text-right p-2'></th>
-							<th className='text-right p-2'>(simple/full)</th>
-							<th className='text-right p-2'>(rand/pop/adv)</th>
-							<th className='text-right p-2'></th>
+						<tr className='border-b border-gray-200 text-[10px] text-gray-600'>
+							<th className='text-left p-1.5'></th>
+							<th className='text-right p-1.5'></th>
+							<th className='text-right p-1.5'></th>
+							<th className='text-right p-1.5'>(simple/full)</th>
+							<th className='text-right p-1.5'>(rand/pop/adv)</th>
+							<th className='text-right p-1.5'></th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr className='border-b border-gray-200'>
-							<td className='p-3'>
+							<td className='p-2'>
 								<div className='font-medium'>Moondream 0.5B</div>
-								<div className='text-xs text-gray-500'>latest (12-04-24)</div>
+								<div className='text-[10px] text-gray-500'>latest (12-04-24)</div>
 							</td>
 							<td className='text-right p-3 font-mono'>68.92</td>
 							<td className='text-right p-3 font-mono'>57.24</td>
@@ -538,8 +549,8 @@ import { Callout } from 'nextra/components';
 					</tbody>
 				</table>
 			</div>
-			<div className='p-4 text-sm text-gray-600 border-t border-gray-200'>
-				<h4 className='font-medium mb-2'>Benchmark Details:</h4>
+			<div className='p-4 text-xs 3xl:text-sm text-gray-600 border-t border-gray-200'>
+				<h4 className='font-semibold mb-2'>Benchmark Details</h4>
 				<div className='grid grid-cols-1 md:grid-cols-2 gap-2'>
 					<ul className='space-y-1'>
 						<li><span className='font-medium'>TextVQA</span>: Reading and understanding text in natural images</li>
@@ -558,7 +569,7 @@ import { Callout } from 'nextra/components';
 
 ## Feature Support
 
-<div className='bg-white rounded-lg border border-gray-200 p-6 mb-8'>
+<div className='bg-white border border-gray-200 p-6 mb-8'>
 	<div className='overflow-x-auto'>
 		<table className='min-w-full'>
 			<thead>
@@ -572,14 +583,14 @@ import { Callout } from 'nextra/components';
 			</thead>
 			<tbody>
 				<tr className='border-b border-gray-200'>
-					<td className='py-3 px-4'>2B Models (FP16/INT8/INT4)</td>
+					<td className='py-3 px-4'>2B</td>
 					<td className='text-center py-3 px-4'>✅</td>
 					<td className='text-center py-3 px-4'>✅</td>
 					<td className='text-center py-3 px-4'>✅</td>
 					<td className='text-center py-3 px-4'>✅</td>
 				</tr>
 				<tr className='border-b border-gray-200'>
-					<td className='py-3 px-4'>0.5B Models (INT8/INT4)</td>
+					<td className='py-3 px-4'>0.5B</td>
 					<td className='text-center py-3 px-4'>✅</td>
 					<td className='text-center py-3 px-4'>✅</td>
 					<td className='text-center py-3 px-4'>✅</td>
