--- a/src/pages/specifications.mdx
+++ b/src/pages/specifications.mdx
@@ -373,11 +373,10 @@ import { Callout } from 'nextra/components';
 							<th className='text-right p-2 font-semibold text-gray-700'>CountBench</th>
 							<th className='text-right p-2 font-semibold text-gray-700'>TallyQA</th>
 							<th className='text-right p-2 font-semibold text-gray-700'>POPE</th>
-							<th className='text-right p-2 font-semibold text-gray-700'>SeedBench2+</th>
 						</tr>
 						<tr className='border-b border-gray-200 text-[10px] text-gray-600'>
 							<th className='text-left p-1.5'></th>
-							<th className='text-right p-1.5'></th>
+							<th className='text-right p-1.5'>(total)</th>
 							<th className='text-right p-1.5'></th>
 							<th className='text-right p-1.5'></th>
 							<th className='text-right p-1.5'></th>
@@ -393,14 +392,13 @@ import { Callout } from 'nextra/components';
 								<div className='font-medium'>2025-01-09</div>
 								<div className='text-[10px] text-gray-500'>latest</div>
 							</td>
-							<td className='text-right p-2 font-mono'>72.2</td>
+							<td className='text-right p-2 font-mono'>73.2</td>
 							<td className='text-right p-2 font-mono'>73.4</td>
-							<td className='text-right p-2 font-mono'>75.9</td>
-							<td className='text-right p-2 font-mono'>60.5</td>
+							<td className='text-right p-2 font-mono'>76.6</td>
+							<td className='text-right p-2 font-mono'>61.7</td>
 							<td className='text-right p-2 font-mono'>80.0</td>
-							<td className='text-right p-2 font-mono'>76.9</td>
-							<td className='text-right p-2 font-mono'>89.8</td>
-							<td className='text-right p-2 font-mono'>55.7</td>
+							<td className='text-right p-2 font-mono'>82.6 / 76.5</td>
+							<td className='text-right p-2 font-mono'>92.4 / 90.3 / 87.2</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-08-26</td>
@@ -411,7 +409,6 @@ import { Callout } from 'nextra/components';
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono'>82.6 / 77.6</td>
 							<td className='text-right p-2 font-mono'>89.6 / 88.8 / 87.2</td>
-							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-07-23</td>
@@ -422,7 +419,6 @@ import { Callout } from 'nextra/components';
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono'>82.0 / 76.8</td>
 							<td className='text-right p-2 font-mono'>91.3 / 89.7 / 86.9</td>
-							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-05-20</td>
@@ -433,7 +429,6 @@ import { Callout } from 'nextra/components';
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono'>82.1 / 76.6</td>
 							<td className='text-right p-2 font-mono'>91.5 / 89.6 / 86.2</td>
-							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-05-08</td>
@@ -444,7 +439,6 @@ import { Callout } from 'nextra/components';
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono'>81.6 / 76.1</td>
 							<td className='text-right p-2 font-mono'>90.6 / 88.3 / 85.0</td>
-							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-04-02</td>
@@ -454,7 +448,6 @@ import { Callout } from 'nextra/components';
 							<td className='text-right p-2 font-mono'>24.3</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono'>80.1 / 74.2</td>
-							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
@@ -466,7 +459,6 @@ import { Callout } from 'nextra/components';
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono'>79.6 / 73.3</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
-							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-03-06</td>
@@ -477,14 +469,12 @@ import { Callout } from 'nextra/components';
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono'>79.5 / 73.2</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
-							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 						</tr>
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-03-04</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono'>58.5</td>
 							<td className='text-right p-2 font-mono'>36.4</td>
-							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
