--- a/src/pages/specifications.mdx
+++ b/src/pages/specifications.mdx
@@ -381,7 +381,7 @@ import { Callout } from 'nextra/components';
 							<th className='text-right p-1.5'></th>
 							<th className='text-right p-1.5'></th>
 							<th className='text-right p-1.5'></th>
-							<th className='text-right p-1.5'>(simple/complex)</th>
+							<th className='text-right p-1.5'>(simple/full)</th>
 							<th className='text-right p-1.5'>(rand/pop/adv)</th>
 							<th className='text-right p-1.5'></th>
 						</tr>
@@ -494,7 +494,7 @@ import { Callout } from 'nextra/components';
 					</ul>
 					<ul className='space-y-1'>
 						<li><span className='font-medium'>CountBench</span>: Specialized counting questions benchmark</li>
-						<li><span className='font-medium'>TallyQA</span>: Object counting (simple vs. complex questions)</li>
+						<li><span className='font-medium'>TallyQA</span>: Object counting (simple vs. full questions)</li>
 						<li><span className='font-medium'>POPE</span>: Object presence verification (random/popular/adversarial)</li>
 						<li><span className='font-medium'>SeedBench2+</span>: Extended vision-language understanding benchmark</li>
 					</ul>
@@ -545,7 +545,7 @@ import { Callout } from 'nextra/components';
 					<ul className='space-y-1'>
 						<li><span className='font-medium'>TextVQA</span>: Reading and understanding text in natural images</li>
 						<li><span className='font-medium'>DocVQA</span>: Document understanding and question answering</li>
-						<li><span className='font-medium'>TallyQA</span>: Object counting (simple vs. complex questions)</li>
+						<li><span className='font-medium'>TallyQA</span>: Object counting (simple vs. full questions)</li>
 					</ul>
 					<ul className='space-y-1'>
 						<li><span className='font-medium'>POPE</span>: Object presence verification (random/popular/adversarial)</li>
