--- a/src/pages/specifications.mdx
+++ b/src/pages/specifications.mdx
@@ -369,7 +369,6 @@ import { Callout } from 'nextra/components';
 							<th className='text-right p-2 font-semibold text-gray-700'>ChartQA</th>
 							<th className='text-right p-2 font-semibold text-gray-700'>TextVQA</th>
 							<th className='text-right p-2 font-semibold text-gray-700'>DocVQA</th>
-							<th className='text-right p-2 font-semibold text-gray-700'>RealWorldQA</th>
 							<th className='text-right p-2 font-semibold text-gray-700'>CountBench</th>
 							<th className='text-right p-2 font-semibold text-gray-700'>TallyQA</th>
 							<th className='text-right p-2 font-semibold text-gray-700'>POPE</th>
@@ -377,7 +376,6 @@ import { Callout } from 'nextra/components';
 						<tr className='border-b border-gray-200 text-[10px] text-gray-600'>
 							<th className='text-left p-1.5'></th>
 							<th className='text-right p-1.5'>(total)</th>
-							<th className='text-right p-1.5'></th>
 							<th className='text-right p-1.5'></th>
 							<th className='text-right p-1.5'></th>
 							<th className='text-right p-1.5'></th>
@@ -395,7 +393,6 @@ import { Callout } from 'nextra/components';
 							<td className='text-right p-2 font-mono'>73.2</td>
 							<td className='text-right p-2 font-mono'>73.4</td>
 							<td className='text-right p-2 font-mono'>76.6</td>
-							<td className='text-right p-2 font-mono'>61.7</td>
 							<td className='text-right p-2 font-mono'>80.0</td>
 							<td className='text-right p-2 font-mono'>82.6 / 76.5</td>
 							<td className='text-right p-2 font-mono'>92.4 / 90.3 / 87.2</td>
@@ -403,7 +400,6 @@ import { Callout } from 'nextra/components';
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-08-26</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
-							<td className='text-right p-2 font-mono'>64.3</td>
 							<td className='text-right p-2 font-mono'>65.2</td>
 							<td className='text-right p-2 font-mono'>70.5</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
@@ -413,7 +409,6 @@ import { Callout } from 'nextra/components';
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-07-23</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
-							<td className='text-right p-2 font-mono'>64.9</td>
 							<td className='text-right p-2 font-mono'>60.2</td>
 							<td className='text-right p-2 font-mono'>61.9</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
@@ -423,7 +418,6 @@ import { Callout } from 'nextra/components';
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-05-20</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
-							<td className='text-right p-2 font-mono'>63.1</td>
 							<td className='text-right p-2 font-mono'>57.2</td>
 							<td className='text-right p-2 font-mono'>30.5</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
@@ -433,7 +427,6 @@ import { Callout } from 'nextra/components';
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-05-08</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
-							<td className='text-right p-2 font-mono'>62.7</td>
 							<td className='text-right p-2 font-mono'>53.1</td>
 							<td className='text-right p-2 font-mono'>30.5</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
@@ -443,7 +436,6 @@ import { Callout } from 'nextra/components';
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-04-02</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
-							<td className='text-right p-2 font-mono'>61.7</td>
 							<td className='text-right p-2 font-mono'>49.7</td>
 							<td className='text-right p-2 font-mono'>24.3</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
@@ -453,7 +445,6 @@ import { Callout } from 'nextra/components';
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-03-13</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
-							<td className='text-right p-2 font-mono'>60.6</td>
 							<td className='text-right p-2 font-mono'>46.4</td>
 							<td className='text-right p-2 font-mono'>22.2</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
@@ -463,7 +454,6 @@ import { Callout } from 'nextra/components';
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-03-06</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
-							<td className='text-right p-2 font-mono'>59.8</td>
 							<td className='text-right p-2 font-mono'>43.1</td>
 							<td className='text-right p-2 font-mono'>20.9</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
@@ -473,7 +463,6 @@ import { Callout } from 'nextra/components';
 						<tr className='border-b border-gray-200'>
 							<td className='p-2'>2024-03-04</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
-							<td className='text-right p-2 font-mono'>58.5</td>
 							<td className='text-right p-2 font-mono'>36.4</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
 							<td className='text-right p-2 font-mono text-gray-400'>-</td>
@@ -496,7 +485,7 @@ import { Callout } from 'nextra/components';
 						<li><span className='font-medium'>CountBench</span>: Specialized counting questions benchmark</li>
 						<li><span className='font-medium'>TallyQA</span>: Object counting (simple vs. full questions)</li>
 						<li><span className='font-medium'>POPE</span>: Object presence verification (random/popular/adversarial)</li>
-						<li><span className='font-medium'>SeedBench2+</span>: Extended vision-language understanding benchmark</li>
+						<li><span className='font-medium'>GQA</span>: Extended vision-language understanding benchmark</li>
 					</ul>
 				</div>
 			</div>
